--- a/Assets/Game/Scripts/Scripts.asmdef
+++ b/Assets/Game/Scripts/Scripts.asmdef
@@ -11,10 +11,8 @@
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": true,
-    "precompiledReferences": [
-        "FluentAssertions.dll"
-    ],
+    "overrideReferences": false,
+    "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
