Add HpbarUI and delay effect

--- a/Assets/Game/Scripts/Scripts.asmdef
+++ b/Assets/Game/Scripts/Scripts.asmdef
@@ -7,7 +7,8 @@
         "GUID:f22f718b9b174a74d89f976a69f9dd2a",
         "GUID:6c7d9a66af01afe4783767909c903050",
         "GUID:aa7bb26fb297ee944a4249ceb695c159",
-        "GUID:de13f8b1675b449e6a6af1cc0f7842ec"
+        "GUID:de13f8b1675b449e6a6af1cc0f7842ec",
+        "GUID:381f769d06ad690438c18bce39b2470e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
